chore: Update apispec ExecTests logic

--- a/test_files/anyhost.yaml
+++ b/test_files/anyhost.yaml
@@ -7,6 +7,7 @@ testing:
     protocol: http
     endpoints:
       - path: /endpoint
+        method: POST
         description: Testing anyhost/api/v1/endpoit
         request:
           headers:
