--- a/test_files/anyhost.yaml
+++ b/test_files/anyhost.yaml
@@ -2,24 +2,17 @@ version: "1.0"
 
 testing:
   - description: Testing anyhost.com
-    port: 80
-    host: anyhost.com
-    protocol: http
+    port: 443
+    host: google.com
+    protocol: https
     endpoints:
-      - path: /endpoint
-        method: POST
-        description: Testing anyhost/api/v1/endpoit
+      - path: /
+        method: GET
+        description: Testing google.com/
         request:
-          headers:
-            - "Authorization:bláblá"
-            - "Content-Type:application/json"
-          queryParams:
-            - "query:params"
           body:
             json:
-              name: "Eclésio Melo Júnior"
-              address:
-                streetName: "Some address here"
+              name: "Eclésio"
         expect:
           headers:
             - "Content-Type:application/json"
